--- a/nestjs-with-postgres/template.yaml
+++ b/nestjs-with-postgres/template.yaml
@@ -147,7 +147,7 @@ spec:
       action: argocd:create-resources
       input:
         appName: ${{parameters.namespace}}-${{parameters.application_id}}-bootstrap
-        argoInstance: openshift-gitops-server
+        argoInstance: main
         namespace: openshift-gitops
         repoUrl: https://gitlab-gitlab.${{parameters.cluster_id}}/${{parameters.gitlabGroup}}/${{parameters.namespace}}-${{parameters.application_id}}-gitops.git
         path: 'argocd/'
